[package]
name = "products"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.5"
serde_json = "1.0"
near-sys = "0.1.0"

[profile.release]
codegen-units=1
opt-level = "s"
lto = true
debug = false
panic = "abort"

# dia 1: habilitar de desbordamiento : es util para entrar en panico en el desbordamiento (buenas practicas)
overflow-checks = true
